Update test Dockerfile to actually execute
Bits of the Dockerfile were severely out of date. Can now run tests
locally on my mac.

--- a/scripts/dockerfiles/Dockerfile.test
+++ b/scripts/dockerfiles/Dockerfile.test
@@ -47,8 +47,6 @@ ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
 
 RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
 WORKDIR $GOPATH
-
-COPY go-wrapper /usr/local/bin/
 # End docker-library/golang sourced data
 
 # Once https://github.com/docker/docker/issues/735 is resolved, this and
@@ -56,5 +54,4 @@ COPY go-wrapper /usr/local/bin/
 # section.
 RUN mkdir -p /go/src/github.com/aws/
 WORKDIR /go/src/github.com/aws/amazon-ecs-agent
-COPY scripts/test /entrypoint
-ENTRYPOINT ["/entrypoint"]
+ENTRYPOINT ["make", "test"]
